add css styling to page, add basic javascript structure.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,15 @@
- 
+.jumbotron {
+  margin: 25px;
+}
+
+body {
+  background-color: lightgray;
+}
+
+p {
+  font-size: large;
+}
+
+.jumbotron {
+  
+}
